--- a/.github/workflows/file.yml
+++ b/.github/workflows/file.yml
@@ -2,8 +2,8 @@ on:
   push:
     branches:
       - master
-  path:
-    - develop
+    paths:
+      - develop
 jobs:
   build:
     runs-on: self-hosted
